fixed some overflow issues

--- a/react-app/src/components/CategoryPage/CategoryPage.css
+++ b/react-app/src/components/CategoryPage/CategoryPage.css
@@ -9,6 +9,7 @@
     flex-direction: column;
     align-items: center;
     height: 100%;
+    overflow: auto;
     width: 100%;
     justify-content: center;
     border: 1px black solid;
@@ -52,7 +53,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: ;
+    overflow: auto;
     /* white-space: nowrap; */
     padding: 40px;
     margin: 20px;
