--- a/react-app/src/components/DeckDetailsPage/DeckDetails.css
+++ b/react-app/src/components/DeckDetailsPage/DeckDetails.css
@@ -118,5 +118,5 @@ cursor: pointer;
 .rev-button-container{
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 }
