--- a/react-app/src/components/YourDecksPage/YourDecksPage.css
+++ b/react-app/src/components/YourDecksPage/YourDecksPage.css
@@ -9,6 +9,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    overflow: auto;
     transition: transform 0.2s ease-in-out;
 }
 
