--- a/react-app/src/components/YourQuestionsPage/YourQuestionsPage.css
+++ b/react-app/src/components/YourQuestionsPage/YourQuestionsPage.css
@@ -30,6 +30,7 @@
     border-radius: 10px;
     display: flex;
     justify-content: center;
+    overflow: auto;
     align-items: center;
     flex-direction: column;
     transition: transform 0.2s ease-in-out;
